k8s/node-deployment.yaml
apiVersion: v1
kind: Namespace
metadata: 
  name: fullstack
  labels:
    name: fullstack
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-api
  namespace: fullstack
spec:
  selector:
    matchLabels:
      app: node-api
  template:
    metadata:
      labels:
        app:  node-api
    spec:
      containers:
      - name: node-api
        image: lgumpina/nodek8s
        ports:
        - containerPort: 3000
