k8s/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: fullstack
spec:
  selector:
    matchLabels:
      app:  postgres
  template:
    metadata:
      labels:
        app:  postgres
    spec:
      containers:
        - name: postgres
          image:  postgres
          ports: 
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
              subPath: postgres
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: db-persistent-vol-claim
