k8s/node-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-api
  namespace: fullstack
spec:
  selector:
    app: node-api
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
