k8s/node-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodeapi-ingress
  namespace: fullstack
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/rewrite-target: /$
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - http:
        paths:
        - path: /?(.*)
          pathType: Prefix
          backend:
            service:
              name: feapp-cluster-service
              port:
                number: 3050        
        - path: /api/?(.*)
          pathType: Prefix
          backend:
            service:
              name: node-api
              port:
                number: 80
